# hello-world-argo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app-of-apps.yaml  application.yaml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
apps/: argo-web.yaml  k8s-web.yaml
argo-templates/argo-web/: deployment.yaml  service.yaml
argo-templates/k8s-web/: deployment.yaml  service.yaml
docs/: accessing-the-application.md  argocd-installation.md  minikube-deployment.md
src/argo-web/: Dockerfile  gunicorn.conf.py  wsgi.py
src/argo-web/app/static/: main.css
src/argo-web/app/templates/: index.html
src/k8s-web/: Dockerfile  wsgi.py
src/k8s-web/app/: .env.sample  main.py
src/k8s-web/app/static/: loc.min.js.download
src/k8s-web/app/templates/: index.html
tests/: test_placeholder.py
tests/tools/: build-argo-web.ps1
tools/: build-argo-web.ps1  build-k8s-web.ps1
