[project]
name = "new-python-project"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "pytest-md>=0.2.0",
    "pytest-emoji>=0.2.0"
]

[tool.ruff]
exclude = [
    ".github/skills",
    ".github/agents",
    ".github/prompts",
    "gah-tools-package",
]

lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "C90", # mccabe, complexity,
    "S", # safety
    "A", # built-in
    "D", # docstrings
]

lint.ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D103", # Missing docstring in public function
    "D104", # missing docstring in public package
    "D401", # first line should be in imperative mood
    "B905", # `zip()` without an explicit `strict=` parameter
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # 1 blank line required between summary line and description
    "I001", # Import block is un-sorted or un-formatted
    "S104", # Possible binding to all interfaces
]
 
[tool.ruff.lint.per-file-ignores]
 
[tool.ruff.lint.isort]
known-third-party = ["pandas", "pydantic", "matplotlib", "shapely", "scipy", "munch"]
 
[tool.ruff.lint.mccabe]
max-complexity = 10
